--- a/src/components/Cursor/Cursor.module.css
+++ b/src/components/Cursor/Cursor.module.css
@@ -14,10 +14,10 @@
   width: 10px;
   height: 10px;
 }
-
+/* 
 
 .cursorOutline {
   width: 18px;
   height: 18px;
   border: var(--green) 1px solid;
-}
+} */
