--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -21,16 +21,23 @@
 }
 
 .greenText {
+    margin-top: 80px;
     font-size: var(--title-text);
     font-weight: var(--bold);
     color: var(--green);
-    width: 100%;
+    width: 1000px;
+    max-width: 100%;
 }
 
 .whiteText {
     font-size: var(--info-text);
     font-weight: var(--light);
-    width: 100%;
+    width: 600px;
+    max-width: 100%;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: 0;
+    /* background-color: red; */
 }
 
 .modalContainer {
@@ -73,7 +80,8 @@
 .lastText {
     display: flex;
     text-align: justify;
-    width: 50%;
+    width: 600px;
+    max-width: 100%;
     padding: 1rem;
     background-color: var(--green);
     color: var(--black);
@@ -95,19 +103,15 @@
     }
 
     .greenText {
-        width: 70%;
+        margin-top: 0;
     }
 
     .whiteText {
-        width: 30%;
+        margin-right: 80px;
     }
 
     .lastText {
-        width: 50%;
-    }
-
-    .lastText:hover {
-        width: 90%;
+        width: 70%;
     }
 }
 
