--- a/src/components/Courses/TargetCourses/TargetCourses.module.css
+++ b/src/components/Courses/TargetCourses/TargetCourses.module.css
@@ -93,18 +93,30 @@
     }
 
     .container {
+        z-index: 100;
         height: 100px;
-        padding: 1rem 3rem;
+        /* padding: 1rem 3rem; */
         display: flex;
         align-items: center;
         justify-content: center;
         /* padding-bottom: 0; */
         /* background-color: red; */
+        margin: 0;
+        padding: 0;
     }
     
+    .alink {
+        /* background-color: red; */
+        display: flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
     .imageCourse {
         opacity: 0;
-        margin-bottom: 1rem;
+        /* margin-bottom: 1rem; */
     }
 
     .text {
@@ -112,18 +124,20 @@
     }
 
 
-    .container:hover {
+    /* .container:hover  */
+    
+    .container:hover{
         height: 150px;
-        padding: 1rem 3rem;
-        /* background-color: red; */
+        /* padding: 1rem 3rem; */
         
-        > .imageCourse {
-            opacity: .6;
-            padding-bottom: 1rem;
-        }
+    }
 
-        > .text {
-            color: var(--white);
-        }
+    .container:hover .imageCourse {
+        opacity: .6;
+        /* padding-bottom: 1rem; */
+    }
+
+    .container:hover > .text {
+        color: var(--white);
     }
 }
