--- a/src/components/Courses/TargetCourses/TargetCourses.module.css
+++ b/src/components/Courses/TargetCourses/TargetCourses.module.css
@@ -137,7 +137,7 @@
         /* padding-bottom: 1rem; */
     }
 
-    .container:hover > .text {
+    .container:hover .text {
         color: var(--white);
     }
 }
