--- a/src/components/Courses/TargetCourses/TargetCourses.module.css
+++ b/src/components/Courses/TargetCourses/TargetCourses.module.css
@@ -111,7 +111,7 @@
         width: 100%;
         height: 100%;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
     }
 
     .imageCourse {
