--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    /* padding: 2rem; */
+    padding: 2rem;
+    margin: 200px 0;
 }
 
 .title {
@@ -12,16 +13,10 @@
     color: var(--green);
 }
 
-.projects {
-    padding: 0 2rem;
-}
-
 .containerProject {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px;
-    /* gap: 1rem; */
 }
 
 .containerProject:hover .domainImg {
@@ -36,12 +31,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* width: 90%; */
-    /* height: 90%; */
-    /* padding: 20px; */
-    background-color: var(--green);
+    background-color: var(--darkGreen);
     border-radius: 20px;
-    
 }
 
 .linkDomain h2 {
@@ -67,37 +58,28 @@
 
     .projects {
         display: grid;
-        /* gap: 1rem; */
-        /* grid-auto-rows: 22rem; */
+        gap: 1rem;
         grid-template-columns: repeat(auto-fill, minmax( 20rem, 1fr));
     }
 
     .containerProject {
         min-width: 350px;
     }
-
-    .domainImg {
-        /* margin-top: 40px; */
-    }
-
 }
 
 
 /* DESKTOP 1300 */
 @media(min-width: 1300px) {
+    .container {
+        padding: 0 2rem;
+    }
+
     .projects {
         display: grid;
-        gap: 1rem;
-        grid-auto-rows: 22rem;
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 
     .containerProject {
         margin: 0;
-        /* min-height: 110%; */
-    }
-
-    .linkDomain {
-        border-radius: 5px;
     }
 }
